# CS5330_Realtime_Object_Recognition

./: CMakeLists.txt  readme.md  readme.txt
include/: Features.h  Segmentation.h  ThresholdAndClean.h
src/: Main.cpp
